<resources>
    <string name="app_name">XinBei</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_sy_search">SySearchActivity</string>
    <string name="title_activity_xmxq">XmxqActivity</string>
    <string name="title_activity_project_detal">ProjectDetalActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_surface_view">SurfaceViewActivity</string>
    <string name="title_activity_tv">TVActivity</string>
    <string name="title_activity_problem">ProblemActivity</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="answer">常见问题回答，常见问题回答，常见问题回答，常见问题回答，
                          常见问题回答，常见问题回答，常见问题回答，常见问题回答，
                          常见问题回答，常见问题回答，常见问题回答，常见问题回答，
                          常见问题回答，常见问题回答，常见问题回答，常见问题回答，常见问题回答。</string>
    <string name="title1">"1、发起者常见问题1</string>
    <string name="title2">"2、支持者常见问题2</string>
    <string name="title3">"3、注册登录问题3</string>
    <string name="title4">"4、其他问题4</string>
</resources>
