<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.czd.xinbei.avtivity.AnswerActivity">

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="70dp"
       android:background="#3d9df5">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="常见问题"
           android:textSize="24sp"
           android:gravity="center"
           android:textColor="#ffffff"/>
       <ImageView
           android:id="@+id/back"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@drawable/xibei_return"
           android:layout_gravity="center_vertical"
           android:layout_marginLeft="15dp"/>
   </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textColor="#000000"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textColor="#000000"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title3"
            android:textColor="#000000"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title4"
            android:textColor="#000000"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>
    </LinearLayout>
  </LinearLayout>
    </ScrollView>

</LinearLayout>
